--- a/The Spy/the_spy_sequence_FINAL.html
+++ b/The Spy/the_spy_sequence_FINAL.html
@@ -96,7 +96,7 @@
 </head>
 <body>
   <div id="container">
-    <video playsinline autoplay muted id="video" autoplay muted>
+    <video id="video" autoplay muted>
       <source src="The Spy.mp4" type="video/mp4">
     </video>
     <img id="still" class="layer" src="The_Spy_Still.png" />
@@ -107,7 +107,7 @@
     <img id="replay" src="Replay_Button.png" />
 
     <div id="magnifier">
-      <video playsinline autoplay muted id="zoomed-video" muted loop playsinline>
+      <video id="zoomed-video" muted loop playsinline>
         <source src="The Spy.mp4" type="video/mp4">
       </video>
       <img id="zoomed-still" src="The_Spy_Still.png" />
