--- a/The Spy/the_spy_sequence_FINAL.html
+++ b/The Spy/the_spy_sequence_FINAL.html
@@ -92,9 +92,24 @@
       from { filter: drop-shadow(0 0 5px #aaa); }
       to { filter: drop-shadow(0 0 15px #fff); }
     }
-  </style>
+  
+  #scale-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform-origin: top left;
+  }
+
+  @media screen and (max-width: 1000px) {
+    #scale-wrapper {
+      transform: scale(calc(100vw / 1000));
+    }
+  }
+</style>
 </head>
 <body>
+  <div id="scale-wrapper">
+
   <div id="container">
     <video id="video" autoplay muted>
       <source src="The Spy.mp4" type="video/mp4">
@@ -242,5 +257,7 @@
 
     resetAll();
   </script>
+
+  </div>
 </body>
 </html>
