--- a/The Spy/the_spy_sequence_FINAL.html
+++ b/The Spy/the_spy_sequence_FINAL.html
@@ -91,7 +91,7 @@
 <body>
 <div id="responsive-wrapper">
 <div id="container">
-<video autoplay="" id="video" muted="">
+<video autoplay="" id="video" muted="" playsinline="">
 <source src="The Spy.mp4" type="video/mp4"/>
 </video>
 <img class="layer" id="still" src="The_Spy_Still.png"/>
