--- a/The Spy/the_spy_sequence_FINAL.html
+++ b/The Spy/the_spy_sequence_FINAL.html
@@ -61,7 +61,7 @@
 </head>
 <body>
   <div id="container">
-    <video id="video" src="The_Spy.mp4" autoplay muted></video>
+    <video id="video" src="The_Spy_v2.mp4" autoplay muted></video>
     <img id="The_Spy_Still" src="The_Spy_Still.png" />
     <img id="Crack1" src="Crack1.png" />
     <img id="Crack2" src="Crack2.png" />
@@ -119,7 +119,7 @@
           replayButton.classList.add("fade-in");
         }, 1000);
       });
-});
+    });
 
     replayButton.addEventListener("click", resetAll);
 
